--- a/public/styles/_sidebar_nav.scss
+++ b/public/styles/_sidebar_nav.scss
@@ -1,142 +1,203 @@
-.nav--sidebar {
-	
-	$activeColor: $gray-200;
-	$hoverColor: $gray-100;
-	
-	flex-direction: column;
-	border-bottom: 1px solid $border-color;
-	
-	& > .nav-item {
-		border-top: 1px solid $border-color;
-		display: grid;
-		grid-template-rows: auto auto;
-		grid-template-columns: 1fr 2rem;
-		
-		& > a.nav-link {
-			grid-row: 1/2;
-			grid-column: 1/3;
-			color: inherit;
-			position: relative;
-			flex-grow: 2;
-			
-			
-			
-			&.active, {
-				background-color: $activeColor;
-				color: color-yiq($activeColor);
-				&:after {
-					color: color-yiq($activeColor);
-				}
-			}
-			&:hover {
-				background-color: $hoverColor;
-				color: color-yiq($hoverColor);
-				&:after {
-					color: color-yiq($hoverColor);
-				}
-			}
-		}
-		
-		&--has-submenu {
-			& > a.nav-link {
-				grid-column: 1/2;	
-			}
-			
-			
-			
-			.expander {
-				grid-row: 1/2;
-				grid-column: 2/3;
-				width: 2rem;
-				height: 100%;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				line-height: 1;
-				color: $border-color;
-				cursor: pointer;
-				.fas, .far {
-					transform: rotate(0);
-					transition: all 0.25s;
-				}
+.nav-section {
+	.sidebar-toggle {
+		display: none;
+	}
+	.nav--sidebar {
 
+		$backgroundColor: white; // For color functions working properly do not use "transparent"
+		background-color: $backgroundColor;
+		$activeColor: $gray-200;
+		$hoverColor: $gray-100;
+		
+		flex-direction: column;
+		border-bottom: 1px solid $border-color;
+		
+		& > .nav-item {
+			border-top: 1px solid $border-color;
+			display: grid;
+			grid-template-rows: auto auto;
+			grid-template-columns: 1fr 2rem;
+			
+			& > a.nav-link {
+				grid-row: 1/2;
+				grid-column: 1/3;
+				color: color-yiq($backgroundColor, $body-color);
+				position: relative;
+				flex-grow: 2;
+				
+				
+				
+				&.active, {
+					background-color: $activeColor;
+					color: color-yiq($activeColor);
+					&:after {
+						color: color-yiq($activeColor);
+					}
+				}
 				&:hover {
 					background-color: $hoverColor;
 					color: color-yiq($hoverColor);
-				}
-				
-				&:not(.collapsed) {
-					.fas, .far {
-						transform: rotate(180deg);
+					&:after {
+						color: color-yiq($hoverColor);
 					}
 				}
 			}
-			a.nav-link.active ~ .expander {
-				background-color: $activeColor;
-				color: color-yiq($activeColor);
-			}
-
-			.submenu {
-				grid-row: 2/3;
-				grid-column: 1/3;
-
-			}
 			
-			
-		}
-	
-		
-	}
-	
-	
-	
-	
-	
-	&__submenu {
-		padding-left: $grid-gutter-width*0.75;
-		grid-row: 2/3;
-		grid-column: 1/3;
-		display: block;
-		font-size: 0.9rem;
-		.nav-item {
-			display: grid;
-			grid-template-rows: auto auto;
-			grid-template-columns: 1fr 2em;
-			border-top: 1px solid rgba($border-color, 0.5);
-			&:first-child {
-				//border-top: none;
-			}
-			
-			
-			& > .nav-link {
-				grid-row: 1/2;
-				grid-column: 1/3;
-				color: $body-color;
-				padding: $grid-gutter-width/8 $grid-gutter-width/4;
-				&.active {
-					background-color: $activeColor;
-					color: color-yiq($activeColor);
-				}
-				&:hover {
-					background-color: $hoverColor;
-					color: color-yiq($hoverColor);
-				}
-			}
 			&--has-submenu {
-				& > .nav-link {
-					grid-column: 1/2;
+				& > a.nav-link {
+					grid-column: 1/2;	
 				}
+				
+				
+				
 				.expander {
 					grid-row: 1/2;
 					grid-column: 2/3;
-					width: 2em;
+					width: 2rem;
+					height: 100%;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					line-height: 1;
+					color: $border-color;
+					cursor: pointer;
+					.fas, .far {
+						transform: rotate(0);
+						transition: all 0.25s;
+					}
+
+					&:hover {
+						background-color: $hoverColor;
+						color: color-yiq($hoverColor);
+					}
+					
+					&:not(.collapsed) {
+						.fas, .far {
+							transform: rotate(180deg);
+						}
+					}
 				}
-				& > .nav--sidebar__submenu {
+				a.nav-link.active ~ .expander {
+					background-color: $activeColor;
+					color: color-yiq($activeColor);
+				}
+
+				.submenu {
 					grid-row: 2/3;
 					grid-column: 1/3;
-					padding-left: $grid-gutter-width*0.5;
+
+				}
+				
+				
+			}
+		
+			
+		}
+		
+		
+		
+		
+		
+		&__submenu {
+			padding-left: $grid-gutter-width*0.75;
+			grid-row: 2/3;
+			grid-column: 1/3;
+			display: block;
+			font-size: 0.9em;
+			.nav-item {
+				display: grid;
+				grid-template-rows: auto auto;
+				grid-template-columns: 1fr 2em;
+				border-top: 1px solid rgba($border-color, 0.5);
+				&:first-child {
+					//border-top: none;
+				}
+				
+				
+				& > .nav-link {
+					grid-row: 1/2;
+					grid-column: 1/3;
+					color:color-yiq( $backgroundColor,  $body-color );//$body-color;
+					padding: $grid-gutter-width/8 $grid-gutter-width/4;
+					&.active {
+						background-color: $activeColor;
+						color: color-yiq($activeColor, $body-color);
+					}
+					&:hover {
+						background-color: $hoverColor;
+						color: color-yiq($hoverColor);
+					}
+				}
+				&--has-submenu {
+					& > .nav-link {
+						grid-column: 1/2;
+					}
+					.expander {
+						grid-row: 1/2;
+						grid-column: 2/3;
+						width: 2em;
+					}
+					& > .nav--sidebar__submenu {
+						grid-row: 2/3;
+						grid-column: 1/3;
+						padding-left: $grid-gutter-width*0.5;
+					}
 				}
 			}
 		}
 	}
+
+	@include media-breakpoint-down(sm) {
+		margin-left: $grid-gutter-width/2;
+		margin-right: $grid-gutter-width/2;
+		margin-bottom: $grid-gutter-width/2;
+		.sidebar-toggle {
+			width: 100%;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			padding: 0.5rem;
+			border: none;
+			background-color: white;
+			&__text {
+				&-hidden {
+					display: inline;
+				}
+				&-shown {
+					display: none;
+				}
+			}
+			&__icon {
+				display: inline-flex;
+				justify-content: center;
+				transition: transform 0.25s;
+			}
+		}
+		.nav--sidebar {
+			display: none;
+			width: 100%;
+			max-width: 100%;
+			
+		}
+
+		&.show-sm {
+			.nav--sidebar {
+				display: block;
+			}
+			.sidebar-toggle{
+				&__text {
+					&-hidden {
+						display: none;
+					}
+					&-shown {
+						display: inline;
+					}
+				}
+				&__icon {
+					transform: rotate(180deg);
+				}
+			}
+		}
+	}
+
 }
