--- a/public/styles/_sidebar_nav.scss
+++ b/public/styles/_sidebar_nav.scss
@@ -102,7 +102,9 @@
 			padding-left: $grid-gutter-width*0.75;
 			grid-row: 2/3;
 			grid-column: 1/3;
-			display: block;
+			&.show, &.collapsing {
+				display: block;
+			}
 			font-size: 0.9em;
 			.nav-item {
 				display: grid;
