--- a/public/styles/_application_variables.scss
+++ b/public/styles/_application_variables.scss
@@ -18,3 +18,6 @@ $breadcrumb-padding-x:		 0;
 // And replace "Font Awesome 5 Brands" with $fa-brands-font-family
 $fa-font-family: "Font Awesome 6 Free";
 $fa-brands-font-family: "Font Awesome 6 Brands";
+
+// Sidebar nav
+$sidebar-collapse-breakpoint: sm;
