--- a/public/styles/_layout.scss
+++ b/public/styles/_layout.scss
@@ -2,6 +2,10 @@
 	background-color: white;
 	max-width: $max-page-width;
 	margin: auto;
+	padding-top: $grid-gutter-width;
+	@include media-breakpoint-down($navbar_breakpoint_lower){
+		padding-top: $grid-gutter-width/2;
+	}
 }
 .container-fluid {
 	max-width: $max-page-width;
@@ -63,5 +67,5 @@ footer {
 }
 
 header {
-	background-color: white;
+	//background-color: white;
 }
