sidebar css tuning, styleguides update

--- a/public/styles/_application_variables.scss
+++ b/public/styles/_application_variables.scss
@@ -24,4 +24,5 @@ $fa-brands-font-family: "Font Awesome 6 Brands";
 $navbar_breakpoint_lower: sm;
 
 // Sidebar nav
+// when sidebar collapses to expandable button
 $sidebar-collapse-breakpoint: sm;
