Styling sidebar layout

--- a/public/styles/_application_variables.scss
+++ b/public/styles/_application_variables.scss
@@ -24,5 +24,7 @@ $fa-brands-font-family: "Font Awesome 6 Brands";
 $navbar_breakpoint_lower: sm;
 
 // Sidebar nav
+$sidebar-width: 230px;
+$sidebar-width-lg: 250px;
 // when sidebar collapses to expandable button
 $sidebar-collapse-breakpoint: sm;
