basketinfo popup in progress

--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -134,6 +134,8 @@ $enable-deprecation-messages: false;
 
 @import "basket_info_float";
 
+@import "basket_overview_popup";
+
 @import "photoswipe";
 
 @import "shared/clearfix";
