Offcanvas sidebar component added

--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -136,6 +136,8 @@ $enable-deprecation-messages: false;
 
 @import "photoswipe";
 
+@import "offcanvas";
+
 @import "shared/clearfix";
 @import "shared/loading";
 @import "shared/buttons";
