Offcanvas basket in progress

--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -138,6 +138,8 @@ $enable-deprecation-messages: false;
 
 @import "offcanvas";
 
+@import "offcanvas_basket";
+
 @import "shared/clearfix";
 @import "shared/loading";
 @import "shared/buttons";
