--- a/public/styles/_offcanvas_basket.scss
+++ b/public/styles/_offcanvas_basket.scss
@@ -12,7 +12,7 @@
         flex-grow: 100;
         display: flex;
         flex-direction: column;
-        overflow-y: scroll;
+        overflow-y: hidden;
       }
       &[data-status="error"] {
         display: none;
