Refactored basket ajax updating

--- a/public/styles/_basket_info_float.scss
+++ b/public/styles/_basket_info_float.scss
@@ -43,6 +43,10 @@
         font-size: 1.25em;
       }
 
+      .cart__name {
+        display: none !important;
+      }
+
       .cart-num-items {
         /*position: absolute;
         top: $grid-gutter-width/8;
