--- a/public/styles/_header.scss
+++ b/public/styles/_header.scss
@@ -324,7 +324,7 @@ ol.breadcrumb {
 			}
 		}
 
-		.js--basket_info {
+		.basket_info {
 			.cart__price {
 				display: inline-block;
 				margin-left: 0.5ch;
@@ -779,7 +779,7 @@ ol.breadcrumb {
 	
 }
 
-.js--basket_info {
+.basket_info {
 	a {
 		color: inherit;
 	}
